# cc-cache

./: .gitattributes  .gitignore  MANIFEST.in  cccache.py  requirements.txt  setup.cfg  setup.py
cccache_core/: _version.py  memcached.py
contrib/nginx/: cccache.conf
contrib/uwsgi-emperor/: cccache.ini
doc/: Makefile
doc/source/: conf.py  core.rst  flask_app.rst  index.rst
