[versioneer]
VCS = git
style = pep440
versionfile_source = cccache_core/_version.py
versionfile_build = cccache_core/_version.py
tag_prefix =
parentdir_prefix = cccache_core-

[devpi:upload]
no-vcs = 1

[nosetests]
verbosity = 3
with-doctest = 1
# nologcapture = 1
nocapture = 1

#with-coverage = 1
#cover-html = 1
#cover-html-dir = pages_out/cover
#cover-erase = 1
#cover-package=plugin
##cover-inclusive = 1
##cover-xml = 1

#with-xunit = 1
#xunit-file = pages_out/nosetests.xml

#[metadata]
#description-file = README.md
